# agents

./: .env.example  CODE_IMPROVEMENT_RECOMMENDATIONS.md  README.md  check_monitor.sh  pyproject.toml  run_cli_uv.sh  run_enhanced_trader_uv.sh  run_monitor.sh  run_monitor_background.sh  setup_uv.sh  stop_monitor.sh
docs/: COMMANDS.md  MONITORING.md  README.md  README_REFACTORING_SUMMARY.md  REFACTORING_COMPLETE.md
docs/development/: MCP_TEST_RESULTS.md  MIGRATION_UV.md
examples/: agent_example.py  example_enhanced_analysis.py  mcp_config_example.env
mcp_servers/: crypto_price_server.py
polymarket_agents/: __init__.py
polymarket_agents/application/: __init__.py  agent_factory.py  base_executor.py  creator.py  cron.py  enhanced_executor.py  executor.py  prompts.py  trade.py
polymarket_agents/common/: __init__.py  errors.py  mcp_base.py  retry.py  utils.py
polymarket_agents/config/: __init__.py  settings.py
polymarket_agents/connectors/: __init__.py  chroma.py  news.py
polymarket_agents/polymarket/: __init__.py  gamma.py  polymarket.py
polymarket_agents/utils/: objects.py
scripts/python/: README_MONITOR.md  cli.py  monitor.py
tests/: test_mcp_functionality.py  test_refactoring.py
